--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "mca-acme-store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/AaronBPaden/mca-acme-store#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "node-fetch": "^3.2.4"
