--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "homepage": "https://github.com/AaronBPaden/mca-acme-store#readme",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
+    "helmet": "^5.0.2",
+    "mysql2": "^2.3.3",
     "node-fetch": "^3.2.4"
   }
 }
