--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/AaronBPaden/mca-acme-store#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.7",
